// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`branchless program 1`] = `
Object {
  "depth": 10,
  "height": 7,
  "player": Object {
    "direction": "south",
    "x": 0,
    "y": 1,
  },
  "tiles": Array [],
  "width": 5,
}
`;

exports[`branchless program 2`] = `
Object {
  "depth": 10,
  "height": 7,
  "player": Object {
    "direction": "east",
    "x": 0,
    "y": 1,
  },
  "tiles": Array [],
  "width": 5,
}
`;

exports[`repeat program 1`] = `
Object {
  "depth": 10,
  "height": 7,
  "player": Object {
    "direction": "south",
    "x": 0,
    "y": 1,
  },
  "tiles": Array [],
  "width": 5,
}
`;

exports[`repeat program 2`] = `
Object {
  "depth": 10,
  "height": 7,
  "player": Object {
    "direction": "south",
    "x": 0,
    "y": 2,
  },
  "tiles": Array [],
  "width": 5,
}
`;

exports[`repeat program 3`] = `
Object {
  "depth": 10,
  "height": 7,
  "player": Object {
    "direction": "south",
    "x": 0,
    "y": 3,
  },
  "tiles": Array [],
  "width": 5,
}
`;
